# ekke_core

./: Cargo.toml  Cargo.yml  README.md  defaults.hjson  defaults.yml
src/: ekke.rs  libekke.rs  main.rs  messages.rs
src/ekke_core/: app.rs  config.rs  ekke.rs  ekke_server.rs  errors.rs  lib.rs
src/ekke_core/app/: backend_response.rs  frontend_request.rs
src/ekke_core/ekke/: register_application.rs  rpc_address.rs
src/libekke/: app.rs  config.rs  dispatcher.rs  ekke.rs  ekke_server.rs  errors.rs  libekke.rs
src/libekke/app/: backend_response.rs  frontend_request.rs
src/libekke/dispatcher/: dispatch_macros.rs
src/libekke/ekke/: register_application.rs  rpc_address.rs
src/messages/: app_registration.rs
