cargo-features = [ "default-run" ]

[package]

	name    = "ekke_core"
	version = "0.1.0"
	authors = [ "Naja Melan <najamelan@autistici.org>" ]
	edition = "2018"
	default-run = "ekke"

[lib]

	name = "libekke"
	path = "src/libekke/libekke.rs"


[[bin]]

	name = "ekke"
	path = "src/main.rs"


[dependencies]

	ekke_io           = { path = "../ekke_io" }

	actix             = "~0.7.9"
	failure           = "~0.1.5"

	serde             = "~1.0.87"
	serde_derive      = "~1.0.87"
	serde_cbor        = "~0.9.0"

	slog              = "2.4.1"
	slog-async        = "2.3.0"
	slog-term         = "2.4.0"
	log-panics        = "2.0.0"

	tokio             = { version = "~0.1.15", features = ["async-await-preview"] }
	tokio-async-await = "~0.1.5"
	tokio-uds         = "~0.2.5"

	[dependencies.futures-preview]

		default-features = false
		version          = "0.3.0-alpha.12"

	[dependencies.futures-util-preview]

		default-features = false
		features         = ["tokio-compat"]
		version          = "~0.3.0-alpha.12"


