[package]

	name        = "ekke_core"
	version     = "0.1.0"
	authors     = [ "Naja Melan <najamelan@autistici.org>" ]
	edition     = "2018"


[lib]

	name = "ekke_core"
	path = "src/ekke_core/lib.rs"


[[bin]]

	name = "ekke"
	path = "src/main.rs"


[dependencies]

	ekke_io              = { path = "../ekke_io"    , features = [ "http_server", "tokio-rt" ] }
	ekke_config          = { path = "../ekke_config"                                           }

	actix                = { path = "../../actix", features = [ "tokio" ] }
	clap                 = "2.32.0"
	failure              = "0.1.5"

	futures-preview      = "0.3.0-alpha.13"
	futures-util-preview = "0.3.0-alpha.13"
	futures-locks        = "0.3.3"

	hashbrown            = { version = "0.1.8"  , features = ["nightly"] }
	hyper                = { version = "0.12.25" }
	lazy_static          = "1.2.0"
	parking_lot          = "0.7.1"
	state                = "0.4.1"
	typename             = "0.1.0"

	serde                = "1.0.87"
	serde_derive         = "1.0.87"
	serde_cbor           = "0.9.0"

	slog                 = { version = "~2.4.1", features = [ "max_level_trace", "release_max_level_debug" ] }
	slog-async           = "2.3.0"
	slog-term            = "2.4.0"
	slog_unwraps         = "0.1.5"
	log-panics           = "2.0.0"

	tokio                = { version = "~0.1.15", features = ["async-await-preview"] }
	tokio-async-await    = "0.1.5"
	tokio-uds            = "0.2.5"



